# ELSER-RAG

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  project_explanation.md  pyproject.toml
scripts/: test_chunking.py  test_pdfplumber.py
src/elser_rag/: __init__.py  api.py  chunker.py  config.py  enricher.py  es_index.py  generator.py  logging_config.py  models.py  pdf_parser.py  rag_pipeline.py  retriever.py
src/elser_rag/docs/: ARCHITECTURE.md  PROGRESS.md
