[project]
name = "elser-rag"
version = "0.1.0"
description = "Production-grade RAG using Elasticsearch ELSER — no vector database"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "elasticsearch[async]>=9.0.0",
    "openai>=1.54.0",
    "unstructured[pdf]>=0.16.0",
    "pdfminer.six>=20231228",
    "pdf2image>=1.17.0",
    "pillow>=10.0.0",
    "tiktoken>=0.8.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.12",
]

[project.scripts]
elser-rag = "elser_rag.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/elser_rag"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
